[COLOR yellow][B]v1.3.1[/B][/COLOR]
* Support restarting Kodi for custom Windows software (using -p flag, for portable_data dir)
[COLOR yellow][B]v1.2.9[/B][/COLOR]
* Skin switch - Don't show the current skin in the skins list.
[COLOR yellow][B]v1.2.8[/B][/COLOR]
* Go back to single quick update notification file URL.
[COLOR yellow][B]v1.2.7[/B][/COLOR]
* Rename main menu from "בחירת בילד להתקנה" to "התקן בילד"
[COLOR yellow][B]v1.2.6[/B][/COLOR]
* Temporary force users to migrate to new unified build - PROD.
[COLOR yellow][B]v1.2.5[/B][/COLOR]
* Temporary force users to migrate to new unified build - COMMENTED.
* Renable the setting of auto cache clean on startup.
[COLOR yellow][B]v1.2.4[/B][/COLOR]
* Build skin switch prompt now shows up after fresh build install.
* BUG Fix: Remove "default" attribute when editing lookandfeel.skin setting.
[COLOR yellow][B]v1.2.3[/B][/COLOR]
* Added "build_switch_skin" functionality for unified build.
[COLOR yellow][B]v1.2.2[/B][/COLOR]
* Added dialog window when quick update starts.
[COLOR yellow][B]v1.2.1[/B][/COLOR]
* Now shows latest quick update notification number in Wizard settings.
[COLOR yellow][B]v1.2.0[/B][/COLOR]
* Redesigned quick update notification window.
* Removed build "disableupdate" setting.
* Refactored quick update notification files switching.
[COLOR yellow][B]v1.1.8[/B][/COLOR]
* After build install - sync to latest quick update notification version - to avoid running quick update.
* Added restart kodi function after build install / quick update. (Windows PC only)
[COLOR yellow][B]v1.1.7[/B][/COLOR]
* Removed "כבה עדכון מהיר אוטומטי בעליית הקודי" setting.
* Refactored "force_close_kodi_in_5_seconds" window dialog appearance.
* Added "force_close_kodi_in_5_seconds" to build install. (instead of confirm dialog)
[COLOR yellow][B]v1.1.6[/B][/COLOR]
* Added automatic Quick Updates for builds on Kodi startup.
[COLOR yellow][B]v1.1.5[/B][/COLOR]
* Reordered wizard startup functions order.