@@ -412,8 +412,7 @@ if CONFIG.get_setting('buildname') and not xbmc.Player().isPlaying():
 
 ######################################
 # KODI-RD-IL - INITIAL BUILD SKIN SWITCH
-# TEMPORARY: static "קודי ריל דבריד ישראל" name, after migration need only to check if a build is installed.
-if "קודי ריל דבריד ישראל" in CONFIG.get_setting('buildname') and CONFIG.BUILD_SKIN_SWITCH_DISMISS == 'false' and not xbmc.Player().isPlaying():
+if CONFIG.get_setting('buildname') and CONFIG.BUILD_SKIN_SWITCH_DISMISS == 'false' and not xbmc.Player().isPlaying():
     build_skin_switch_prompt()
 #####################################
 
@@ -475,14 +474,6 @@ if CONFIG.get_setting('autoclean') == 'true':
     auto_clean()
 else:
     logging.log('[Auto Clean Up] Not Enabled', level=xbmc.LOGINFO)
-
-# TEMPORARY
-if "Estuary" in CONFIG.get_setting('buildname') or "FENtastic" in CONFIG.get_setting('buildname'):
-    dialog = xbmcgui.Dialog()
-    dialog.ok(CONFIG.ADDONTITLE,
-              '[B]לא להיבהל! ה-Wizard עכשיו יבצע התקנה מלאה לבילד החדש:\n\"קודי ריל דבריד ישראל\"\nתנו לו לסיים ולקסם לקרות..\nאחרי ההתקנה, תקראו היטב את ההודעה שתקפוץ.[/B]')
-    from resources.libs.wizard import Wizard
-    Wizard().build(name="קודי ריל דבריד ישראל", over=True)
 
 
 ###################UNUSED####################
